tests/compile_fail/group_span.stderr
warning: unnecessary parentheses around block return value
 --> tests/compile_fail/group_span.rs:6:16
  |
6 |     #[strategy((0u8..10u8))]
  |                ^         ^
  |
  = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
  |
6 -     #[strategy((0u8..10u8))]
6 +     #[strategy(0u8..10u8)]
  |

error[E0271]: type mismatch resolving `<Range<u8> as Strategy>::Value == u32`
 --> tests/compile_fail/group_span.rs:6:16
  |
6 |     #[strategy((0u8..10u8))]
  |                ^^^^^^^^^^^ expected `u32`, found `u8`
  |
note: required by a bound in `_strategy_of_x`
 --> tests/compile_fail/group_span.rs:7:8
  |
6 |     #[strategy((0u8..10u8))]
  |                ----------- required by a bound in this function
7 |     x: u32,
  |        ^^^ required by this bound in `_strategy_of_x`

error[E0271]: type mismatch resolving `<Range<u8> as Strategy>::Value == u32`
 --> tests/compile_fail/group_span.rs:4:17
  |
4 | #[derive(Debug, Arbitrary)]
  |                 ^^^^^^^^^ expected `u32`, found `u8`
  |
note: required by a bound in `_strategy_of_x`
 --> tests/compile_fail/group_span.rs:7:8
  |
6 |     #[strategy((0u8..10u8))]
  |                ----------- required by a bound in this function
7 |     x: u32,
  |        ^^^ required by this bound in `_strategy_of_x`
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
